--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "react": "18.2.0",
     "react-native": "0.74.4"
   },
@@ -21,13 +22,16 @@
     "@react-native/eslint-config": "0.74.86",
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
+    "@testing-library/react-native": "^12.5.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.2.4",
     "typescript": "5.0.4"
   },
   "engines": {
